// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders list 1`] = `
<div
  className="dropdown-menu"
>
  <div
    className="menu-search"
  >
    <SearchBox
      autoFocus={true}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="branches.search_for_branches"
      value=""
    />
  </div>
  <ul
    className="menu menu-vertically-limited"
  >
    <React.Fragment
      key="branch-master"
    >
      <ComponentNavBranchesMenuItem
        branchLike={
          Object {
            "isMain": true,
            "name": "master",
          }
        }
        component={
          Object {
            "key": "component",
          }
        }
        key="branch-master"
        onSelect={[Function]}
        selected={true}
      />
    </React.Fragment>
    <React.Fragment
      key="pull-request-1234"
    >
      <li
        className="dropdown-header navbar-context-meta-branch-menu-title"
      >
        branches.pull_requests
      </li>
      <ComponentNavBranchesMenuItem
        branchLike={
          Object {
            "base": "master",
            "branch": "feature",
            "id": "1234",
            "status": Object {
              "bugs": 0,
              "codeSmells": 0,
              "vulnerabilities": 0,
            },
            "title": "qux",
          }
        }
        component={
          Object {
            "key": "component",
          }
        }
        key="pull-request-1234"
        onSelect={[Function]}
        selected={false}
      />
    </React.Fragment>
    <React.Fragment
      key="branch-baz"
    >
      <li
        className="divider"
      />
      <li
        className="dropdown-header"
      >
        branches.orphan_branches
        <Tooltip
          overlay="branches.orphan_branches.tooltip"
          placement="bottom"
        >
          <i
            className="icon-help spacer-left"
          />
        </Tooltip>
      </li>
      <ComponentNavBranchesMenuItem
        branchLike={
          Object {
            "isMain": false,
            "isOrphan": true,
            "mergeBranch": "master",
            "name": "baz",
            "status": Object {
              "bugs": 0,
              "codeSmells": 0,
              "vulnerabilities": 0,
            },
            "type": "SHORT",
          }
        }
        component={
          Object {
            "key": "component",
          }
        }
        key="branch-baz"
        onSelect={[Function]}
        selected={false}
      />
    </React.Fragment>
    <React.Fragment
      key="branch-foo"
    >
      <ComponentNavBranchesMenuItem
        branchLike={
          Object {
            "isMain": false,
            "isOrphan": undefined,
            "mergeBranch": "master",
            "name": "foo",
            "status": Object {
              "bugs": 0,
              "codeSmells": 0,
              "vulnerabilities": 0,
            },
            "type": "SHORT",
          }
        }
        component={
          Object {
            "key": "component",
          }
        }
        key="branch-foo"
        onSelect={[Function]}
        selected={false}
      />
    </React.Fragment>
    <React.Fragment
      key="branch-bar"
    >
      <li
        className="divider"
      />
      <ComponentNavBranchesMenuItem
        branchLike={
          Object {
            "isMain": false,
            "name": "bar",
            "type": "LONG",
          }
        }
        component={
          Object {
            "key": "component",
          }
        }
        key="branch-bar"
        onSelect={[Function]}
        selected={false}
      />
    </React.Fragment>
    <React.Fragment
      key="branch-baz"
    >
      <li
        className="divider"
      />
      <li
        className="dropdown-header"
      >
        branches.orphan_branches
        <Tooltip
          overlay="branches.orphan_branches.tooltip"
          placement="bottom"
        >
          <i
            className="icon-help spacer-left"
          />
        </Tooltip>
      </li>
      <ComponentNavBranchesMenuItem
        branchLike={
          Object {
            "isMain": false,
            "isOrphan": true,
            "mergeBranch": "master",
            "name": "baz",
            "status": Object {
              "bugs": 0,
              "codeSmells": 0,
              "vulnerabilities": 0,
            },
            "type": "SHORT",
          }
        }
        component={
          Object {
            "key": "component",
          }
        }
        key="branch-baz"
        onSelect={[Function]}
        selected={false}
      />
    </React.Fragment>
  </ul>
</div>
`;

exports[`searches 1`] = `
<div
  className="dropdown-menu"
>
  <div
    className="menu-search"
  >
    <SearchBox
      autoFocus={true}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="branches.search_for_branches"
      value="bar"
    />
  </div>
  <ul
    className="menu menu-vertically-limited"
  >
    <React.Fragment
      key="branch-foobar"
    >
      <li
        className="dropdown-header navbar-context-meta-branch-menu-title"
      >
        branches.short_lived_branches
      </li>
      <ComponentNavBranchesMenuItem
        branchLike={
          Object {
            "isMain": false,
            "isOrphan": undefined,
            "mergeBranch": "master",
            "name": "foobar",
            "status": Object {
              "bugs": 0,
              "codeSmells": 0,
              "vulnerabilities": 0,
            },
            "type": "SHORT",
          }
        }
        component={
          Object {
            "key": "component",
          }
        }
        key="branch-foobar"
        onSelect={[Function]}
        selected={true}
      />
    </React.Fragment>
    <React.Fragment
      key="branch-bar"
    >
      <li
        className="divider"
      />
      <ComponentNavBranchesMenuItem
        branchLike={
          Object {
            "isMain": false,
            "name": "bar",
            "type": "LONG",
          }
        }
        component={
          Object {
            "key": "component",
          }
        }
        key="branch-bar"
        onSelect={[Function]}
        selected={false}
      />
    </React.Fragment>
  </ul>
</div>
`;
